Changed classes on the question section to make them easeier to understand. Fixed an overflow issue. Added markup and CSS for the results card. Added schema. Added changes to changelog

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Big Shoulders Display";
+    font-style: bold;
+    font-weight: 900;
+    font-display: swap;
+    src: url(/assets/fonts/big-shoulders-black-display.woff2) format('woff2');
+}
+
 *,
 *::before,
 *::after {
@@ -10,6 +18,9 @@
 }
 
 :root {
+
+    --font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+    --font-accent: "Big Shoulders Display";
 
     /* Black */
     --color-black: oklch(0 0 0);
@@ -53,16 +64,7 @@
     --color-cyan-400: oklch(0.8835 0.1302 201.15);
 
     /* Slate */
-
     --color-slate--500: oklch(0.5544 0.0407 257.42);
-
-    --color-text: oklch(0.6836 0.1852 45.18);
-
-    --font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
-
-    --border-radius-sm: .25rem;
-
-    --background-color: var(--color-lime-200);
 }
 
 html {
@@ -159,7 +161,7 @@ legend {
 .screens {
     scroll-snap-type: y mandatory;
     max-block-size: 100dvb;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .screen {
@@ -216,18 +218,31 @@ legend {
     padding: 1.25rem;
     max-inline-size: 50rem;
     inline-size: 100%;
+    max-block-size: 100dvb;
+    overflow-y: auto;
 }
 
 .screen__title {
+    font-family: var(--font-accent);
     font-size: 3.5rem;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 .screen__subtitle {
     font-size: 1.5rem;
 }
 
-.screen__counter {}
+.screen__subtitle__match-count {
+    font-weight: 700;
+}
+
+.screen__subtitle__score {
+    font-weight: 700;
+}
+
+.screen__subtitle__comment {
+    font-style: italic;
+}
 
 .screen__list-item {
     list-style-position: inside;
@@ -269,7 +284,7 @@ legend {
 
 .category-select {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     gap: .75rem;
 }
 
@@ -358,7 +373,7 @@ legend {
     gap: 1.25rem;
 }
 
-.question-form__question {
+.question-form__fieldset {
     display: flex;
     flex-flow: column wrap;
     gap: 1.25rem;
@@ -374,7 +389,7 @@ legend {
     inline-size: max-content;
 }
 
-.question-form__header {
+.question-form__legend {
     display: flex;
     flex-flow: column wrap;
     gap: 1.25rem;
@@ -382,26 +397,27 @@ legend {
     inline-size: inherit;
 }
 
-.question-form__title-group {
+.question-form__progress {
     display: flex;
     flex-flow: row wrap;
     align-items: baseline;
     justify-content: space-between;
-    gap: 1ch
+    gap: 1ch;
 }
 
-.question-form__title {
+.question-form__progress-current {
+    font-family: var(--font-accent);
     font-size: 3.5rem;
     font-weight: 700;
     line-height: 1.25;
 }
 
-.question-form__question-max {
+.question-form__progress-total {
     font-size: 1.25em;
     font-weight: 700;
 }
 
-.question-form__description {
+.question-form__fieldset-text {
     font-size: 1.5rem;
     font-weight: 400;
 }
@@ -511,4 +527,72 @@ legend {
 
 .answer-option__input:checked::before {
     transform: scale(1);
+}
+
+.screen__results {
+    display: grid;
+    gap: 1.25rem;
+    grid-auto-flow: column;
+    align-items: stretch;
+    scroll-snap-type: x mandatory;
+    overflow-x: auto;
+
+}
+
+.result-card {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: .75rem;
+    padding-inline: 1.5rem;
+    padding-block: 1.25rem;
+    background-color: var(--color-white);
+    border: 2px solid var(--color-black);
+    border-radius: .375rem;
+    inline-size: calc(100dvi - (1.25rem * 2));
+    max-inline-size: calc(50rem - (1.25rem * 2));
+    scroll-snap-align: start;
+}
+
+.result-card__tag {
+    inline-size: max-content;
+    color: var(--color-black);
+    padding-inline: .75rem;
+    padding-block: .375rem;
+    border-radius: .25rem;
+    font-size: .875rem;
+    font-weight: 600;
+
+
+    &[data-match="match"] {
+        background-color: var(--color-lime-200);
+        color: var(--color-black);
+    }
+
+    &[data-match="mismatch"] {
+        background-color: var(--color-orange-200);
+        color: var(--color-black);
+    }
+}
+
+.result-card__answers {
+    margin-block-start: auto;
+}
+
+.result-card__question-title {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.result-card__question-description {
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
+.result-card__answer-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.result-card__answer-summary {
+    font-size: 1.125rem;
 }
